module-2/cl2-k8s/cl2-lb.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "myapp-cl2-lb"
  namespace: "default"
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 80
  selector:
    load-balancer-myapp-cl2-lb: "true"
  sessionAffinity: "None"
  type: "NodePort"
